adding a package json

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <script src="./bundle.js"></script>
     </head>
     <body>
-        hello
+        check in the console for the request type
     </body>
 </html>
